[gd_scene load_steps=36 format=3 uid="uid://c2twt6metu3m7"]

[ext_resource type="Texture2D" uid="uid://d2uji5wbvunra" path="res://Assets/sprites/Protagonist/knight.png" id="1_4elsc"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_jswx1"]
[ext_resource type="Texture2D" uid="uid://be8bjtyfj8rld" path="res://Assets/sprites/Protagonist/a284820d222bf0f082519cc89390c3ad-removebg-preview.png" id="3_kstyj"]
[ext_resource type="Texture2D" uid="uid://cdysunw74fkpu" path="res://Assets/sprites/Protagonist/189700436-pixel-art-hammer-removebg-preview.png" id="4_evfks"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ncv"]
atlas = ExtResource("1_4elsc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j82t3"]
atlas = ExtResource("1_4elsc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w26f0"]
atlas = ExtResource("1_4elsc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8n7n"]
atlas = ExtResource("1_4elsc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0lmm"]
atlas = ExtResource("1_4elsc")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p38am"]
atlas = ExtResource("1_4elsc")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgquj"]
atlas = ExtResource("1_4elsc")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffg7f"]
atlas = ExtResource("1_4elsc")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_45ofk"]
atlas = ExtResource("1_4elsc")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln8j5"]
atlas = ExtResource("1_4elsc")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m2g3"]
atlas = ExtResource("1_4elsc")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjss4"]
atlas = ExtResource("1_4elsc")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvanw"]
atlas = ExtResource("1_4elsc")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ean3"]
atlas = ExtResource("1_4elsc")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhwkh"]
atlas = ExtResource("1_4elsc")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eywn3"]
atlas = ExtResource("1_4elsc")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k4hu"]
atlas = ExtResource("1_4elsc")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfw7f"]
atlas = ExtResource("1_4elsc")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_allva"]
atlas = ExtResource("1_4elsc")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17mrk"]
atlas = ExtResource("1_4elsc")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdxp4"]
atlas = ExtResource("1_4elsc")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ni211"]
animations = [{
"frames": [],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ncv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j82t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w26f0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8n7n")
}],
"loop": false,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0lmm")
}],
"loop": true,
"name": &"Jump",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p38am")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgquj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffg7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45ofk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln8j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m2g3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjss4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvanw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ean3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhwkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eywn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k4hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfw7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_allva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17mrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdxp4")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_oq1je"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2kr77"]

[sub_resource type="Animation" id="Animation_4babs"]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hammer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.1001, 0.1002, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.523599, 0.0, 0.0, 1.5708, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hammer_hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.14, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_yvfpu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hammer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hammer_hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h8mvm"]
_data = {
"RESET": SubResource("Animation_yvfpu"),
"attack": SubResource("Animation_4babs")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_28aaj"]
radius = 8.0

[sub_resource type="Animation" id="Animation_15wc1"]
resource_name = "attack"
length = 0.20001
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-3.14159, -1.22173, -3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword_hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.03, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_lw71a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword_hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6e0e"]
_data = {
"RESET": SubResource("Animation_lw71a"),
"attack": SubResource("Animation_15wc1")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_jswx1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_ni211")
animation = &"Idle"
autoplay = "Idle"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_oq1je")

[node name="Hammer_attack" type="Area2D" parent="."]
show_behind_parent = true
position = Vector2(0, 1)

[node name="Hammer" type="Sprite2D" parent="Hammer_attack"]
position = Vector2(6, -6)
rotation = 1.5708
scale = Vector2(0.063, 0.0620001)
texture = ExtResource("4_evfks")
offset = Vector2(0.356361, -132.302)

[node name="Hammer_hitbox" type="CollisionShape2D" parent="Hammer_attack"]
position = Vector2(16, -9)
shape = SubResource("CircleShape2D_2kr77")
disabled = true

[node name="Hammer_Cooldown" type="Timer" parent="Hammer_attack"]

[node name="Hammer_animations" type="AnimationPlayer" parent="Hammer_attack"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_h8mvm")
}

[node name="Sword_attack" type="Area2D" parent="."]
visible = false
show_behind_parent = true

[node name="Sword" type="Sprite2D" parent="Sword_attack"]
position = Vector2(5.32302, -5.42007)
rotation = -3.14159
scale = Vector2(0.0291971, 0.0206096)
texture = ExtResource("3_kstyj")
offset = Vector2(11.0636, 319.265)

[node name="Sword_hitbox" type="CollisionShape2D" parent="Sword_attack"]
position = Vector2(13, -8)
shape = SubResource("CircleShape2D_28aaj")

[node name="Sword_Cooldown" type="Timer" parent="Sword_attack"]

[node name="Sword_animations" type="AnimationPlayer" parent="Sword_attack"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_p6e0e")
}
